<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18sp"
        android:gravity="center"
        android:text="@string/remind"
        android:textColor="@color/green"
        android:textSize="22dp"/>
    <!--android:textColor="#FF63aade"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/exit_action_button_selector"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@android:color/black"
                android:textSize="20dp"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="13dp"
            android:layout_gravity="center"
            android:background="#ddaaaaaa"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/exit_action_button_selector"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>