<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/entrance1">

    <ImageView
        android:id="@+id/login_backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/entrance1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/start_bottom_bg"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4c000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="22dp"
            android:paddingRight="22dp">

            <com.yeming.paopao.views.third.CircleImageView
                android:id="@+id/userIcon"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/user_icon_default_main"
                app:border_color="@color/green"
                app:border_width="2dp"/>

            <com.yeming.paopao.views.DeletableEditText
                android:id="@+id/user_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_selector"
                android:drawableLeft="@drawable/user_account"
                android:drawableRight="@drawable/edit_delete"
                android:hint="@string/login_name_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/font_white"
                android:textColorHint="@color/font_white_disable"
                android:textCursorDrawable="@null"
                android:textSize="18sp"/>

            <com.yeming.paopao.views.DeletableEditText
                android:id="@+id/user_pwd_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edit_selector"
                android:drawableLeft="@drawable/user_password"
                android:drawableRight="@drawable/edit_delete"
                android:hint="@string/login_pwd_hint"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/font_white"
                android:textColorHint="@color/font_white_disable"
                android:textCursorDrawable="@null"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/loginButton"
                style="?android:textAppearanceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_button_selector"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/login_button"
                android:textColor="@drawable/login_button_font"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/register_link"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center"
                android:text="@string/login_register_link"
                android:textColor="@color/font_white_disable"
                android:textSize="18sp"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
